bug 3838 - move the CSS out of the general songbird.css and into a video window specific videoWin.css instead.  Also make VLC collapse properly. (r=matt)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@5399 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/skin/songbird.css
+++ b/feathers/rubberducky/skin/songbird.css
@@ -24,9 +24,7 @@
 //
  */
 
-/** TODO Document **/
 
-#video-boxes {
-    padding-left: 10px;
-    padding-right: 10px;
-}
+
+
+/** TODO Document **/
